--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,17 @@
 Changelog
 #########
 
+Version 0.8.0
+=============
+
+The driver is no longer *beta*, and is now considered as **stable** for Firebird 3.0 (support for Firebird 4 is still evolving till final release).
+
+* Documentation, both in code and separate (especially Usage Guide).
+* Added support for new FB4 data types in ARRAY fields.
+* Refactoring in driver hooks.
+* New `.Cursor.call_procedure()` method.
+* Refactoring and fixes in Server and its services.
+
 Version 0.7.0
 =============
 
@@ -29,7 +40,7 @@ Version 0.6.0
   - Emit warnings when objects with allocated Firebird resources are disposed (by Python
     GC) without prior call to `close()`.
   - Trace instrumentation removed. Use dynamic trace configuration from firebird-base 0.6.0.
-  - `Connection` and `Transaction` information moved to inner objects accesible via `info`
+  - `Connection` and `Transaction` information moved to inner objects accessible via `info`
     properties (relates to FB4+ support).
 
 Version 0.5.0
