--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,11 @@
 Changelog
 #########
 
+Version 1.2.1
+=============
+
+* Fixed dependency to `firebird-base` (v1.3.0)
+
 Version 1.2.0
 =============
 
