--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,11 @@
 Changelog
 #########
 
+Version 1.3.1
+=============
+
+* Fix unregistered bug: wrong handling of Firebird 4 string info parameters.
+
 Version 1.3.0
 =============
 
