--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,13 @@
 Changelog
 #########
 
+Version 1.4.2
+=============
+
+* New `.ServerConfig` options: `~ServerConfig.encoding` and `~ServerConfig.encoding_errors`.
+* New `.connect_server` parameters: `encoding` and `encoding_errors`.
+* Requires firebird-base 1.3.1
+
 Version 1.4.1
 =============
 
