--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,7 +6,7 @@ Version 1.7.0
 =============
 
 * New: `.Cursor.to_dict` method.
-* Move away from setup.cfg to pyproject.toml, changed source three layout.
+* Move away from setup.cfg to pyproject.toml, changed source tree layout.
 
 Version 1.6.0
 =============
