--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,12 @@
 Changelog
 #########
 
+Version 1.10.1
+==============
+
+* Call iProvider.shutdown() on program exit.
+* Fix: #33 - SIGABRT on interface detach.
+
 Version 1.10.0
 ==============
 
