Fix mangled DbInfoCode items

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,13 @@
 Changelog
 #########
 
+Version 1.10.2
+==============
+
+* Fix: mangled output for `.DbInfoCode` itsens `CRYPT_PLUGIN`, `WIRE_CRYPT`, `DB_GUID` and `DB_FILE_ID`
+* Fix: #34 - Pre-1970 dates causes OverflowError
+* Fix: #38 - 'datetime.date' object has no attribute 'date'
+
 Version 1.10.1
 ==============
 
