--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -2,6 +2,11 @@
 Changelog
 #########
 
+Version 1.10.11
+===============
+
+- Dependency to `firebird-base` adjusted to "~=1.8"
+
 Version 1.10.10
 ===============
 
