--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -14,7 +14,7 @@ Version 2.0.0
 - Removed all usage of `LoggingIdMixin` as it's no longer available in `firebird-base` v2.0.
 - #41: Some `firebird.conf` parameters are missing in `fbapi.config_items`
 - Fix: Added validation-related info codes that were ommited in `.DatabaseInfoProvider3`.
-- Typy hints adjusted to Python 3.11 standards
+- Type hints adjusted to Python 3.11 standards
 - Fix: `.TPB.parse_buffer` handling of new READ COMMITTED READ CONSISTENCY.
 - Fix: `.DPB.parse_buffer` and `.SPB_ATTACH.parse_buffer`.
 - Fix: Introduce `.StatementInfoProvider4` for proper handling of FB v5 additions.
